--- a/gdg task 1.html
+++ b/gdg task 1.html
@@ -26,7 +26,9 @@
         <ul>
             <li>I love coding </li>
             <li>i want to be fullstack web developer in 6 month </li>
+            <li>I joined GDG to strength my skill</li>
         </ul>
     </main>
 </body>
+
 </html>
